RESOLVED FIXED 203871
[iOS] Scroll position does not get restored when doing a history navigation while the reader view is shown
https://bugs.webkit.org/show_bug.cgi?id=203871
Summary [iOS] Scroll position does not get restored when doing a history navigation w...
Chris Dumez
Reported 2019-11-05 16:46:53 PST
Scroll position does not get restored when doing a history navigation while the reader view is shown.
Attachments
Patch (12.16 KB, patch)
2019-11-05 16:49 PST, Chris Dumez
no flags
Patch (12.20 KB, patch)
2019-11-05 16:58 PST, Chris Dumez
no flags
Archive of layout-test-results from webkit-cq-01 for mac-highsierra (3.49 MB, application/zip)
2019-11-05 20:48 PST, WebKit Commit Bot
no flags
Chris Dumez
Comment 1 2019-11-05 16:47:29 PST
Chris Dumez
Comment 2 2019-11-05 16:49:35 PST
Chris Dumez
Comment 3 2019-11-05 16:58:54 PST
WebKit Commit Bot
Comment 4 2019-11-05 20:48:02 PST
Comment on attachment 382865 [details] Patch Rejecting attachment 382865 [details] from commit-queue. New failing tests: webgl/1.0.3/conformance/extensions/webgl-draw-buffers.html Full output: https://webkit-queues.webkit.org/results/13217588
WebKit Commit Bot
Comment 5 2019-11-05 20:48:04 PST
Created attachment 382890 [details] Archive of layout-test-results from webkit-cq-01 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: webkit-cq-01 Port: mac-highsierra Platform: Mac OS X 10.13.6
WebKit Commit Bot
Comment 6 2019-11-05 21:31:32 PST
The commit-queue encountered the following flaky tests while processing attachment 382865 [details]: imported/w3c/web-platform-tests/websockets/bufferedAmount-unchanged-by-sync-xhr.any.worker.html bug 202003 (author: youennf@gmail.com) webgl/1.0.3/conformance/extensions/webgl-draw-buffers.html bug 203878 (author: mmaxfield@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7 2019-11-05 21:31:38 PST
The commit-queue encountered the following flaky tests while processing attachment 382865 [details]: webgl/1.0.3/conformance/extensions/webgl-draw-buffers.html bug 203878 (author: mmaxfield@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 8 2019-11-05 22:41:58 PST
Comment on attachment 382865 [details] Patch Clearing flags on attachment: 382865 Committed r252125: <https://trac.webkit.org/changeset/252125>
WebKit Commit Bot
Comment 9 2019-11-05 22:42:00 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.