[iOS] Scroll position does not get restored when doing a history navigation while the reader view is shown https://bugs.webkit.org/show_bug.cgi?id=203871 <rdar://problem/56564603>

Reviewed by Tim Horton.

Source/WebKit:

Previously, attempts to restore the scroll position on the web view while it is being dynamically resized
would get ignored. Instead, we now delay restoring the scroll position until after the view is resized.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _restorePageScrollPosition:scrollOrigin:previousObscuredInset:scale:]):
(-[WKWebView _restorePageStateToUnobscuredCenter:scale:]):

Tools:

Add API test coverage.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit/simple-tall.html:
* TestWebKitAPI/Tests/WebKitCocoa/RestoreScrollPosition.mm: Added.
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/217240@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252125 268f45cc-cd09-0410-ab3c-d52691b4dbfc